--- a/src/main/java/com/crm/qa/config/config.properties
+++ b/src/main/java/com/crm/qa/config/config.properties
@@ -1,6 +1,8 @@
 url = https://www.freecrm.com
 
-username = naveenk
-password = test@123
+username = kumarihiteshjain@gmail.com
+password = Dimpaljain218@
 
-browser = chrome
+browser = edge
+
+#chrome
