--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,39 +1,58 @@
+# Javascript Node CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+#
 version: 2
-
-defaults: &defaults
-    docker:
-      - image: circleci/openjdk:11-node-browsers
-    working_directory: ~/axe-selenium-java
-
 jobs:
-  dependencies:
-    <<: *defaults
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-mvn-deps-{{ checksum "pom.xml" }}
-      - run: mvn install -DskipTests
-      - save_cache:
-          key: v1-mvn-deps-{{ checksum "pom.xml" }}
-          paths:
-            - ~/.m2
-  tests:
-    <<: *defaults
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-mvn-deps-{{ checksum "pom.xml" }}
-      - run:
-          command: node src/main/resources/test-app.js
-          background: true
-      - run: sleep 5 # sleep to allow the server some time to boot
-      - run: mvn test
-
-workflows:
-  version: 2
   build:
-    jobs:
-      - dependencies
-      - tests:
-          requires:
-            - dependencies
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:7.10
+      - image: selenium/standalone-chrome:3.11.0
+      
+      # Specify service dependencies here if necessary  
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/mongo:3.4.4
+
+    working_directory: ~/repo
+            
+    steps:
+      - checkout    
+      - setup_remote_docker
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+     
+      - run: yarn install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+          
+      - run:
+          name: create docker network
+          command: docker network create grid
+     
+      - run:
+          name: install selenium-hub
+          command: docker run -d --rm -p 4444:4444 --net grid --name selenium-hub selenium/hub:3.11.0
+          
+      - run:
+          name: install selenium-node
+          command: docker run -d --rm --net grid -e HUB_HOST=selenium-hub -v /dev/shm:/dev/shm selenium/node-chrome:3.11.0
+      
+      - run:
+          name: install-npm
+          command: npm install
+        
+      # run tests!
+      - run: 
+          name: run tests
+          command: node index.js
+          
+
