--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,59 +1,8 @@
-version: 2.1
-executors:
-  node:
-    docker:
-      - image: 'circleci/node:8'
-    shell: /bin/bash
-    working_directory: ~/app
+version: 2
 jobs:
   build:
-    executor: node
+    docker:
+      - image: circleci/node:7.10
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            # Find a cache corresponding to this specific package-lock.json checksum
-            # when this file is changed, this key will fail
-            - v1-npm-deps-{{ checksum "package-lock.json" }}
-            # Find the most recently generated cache used from any branch
-            - v1-npm-deps-
-      - run:
-          name: Install Node.js dependencies with Npm
-          command: npm install
-      - save_cache:
-          paths:
-            - ./node_modules
-          key: v1-npm-deps-{{ checksum "package-lock.json" }}
-      - persist_to_workspace:
-          root: ~/app
-          paths:
-            - .
-  test:
-    executor: node
-    steps:
-      - attach_workspace:
-          at: ~/app
-      - run:
-          name: Test
-          command: npm test
-      - run:
-          name: Save test results
-          command: |
-            npm install nyc mocha-junit-reporter
-            mkdir ~/reports
-            ./node_modules/.bin/nyc ./node_modules/.bin/mocha spec.js --recursive --timeout=10000 --exit --reporter mocha-junit-reporter --reporter-options mochaFile=~/reports/mocha/test-results.xml
-          environment:
-            MOCHA_FILE: ~/reports/test-results.xml
-          when: always
-      - store_test_results:
-          path: ~/reports
-      - store_artifacts:
-          path: ~/reports
-workflows:
-  version: 2
-  build_and_test:
-    jobs:
-      - build
-      - test:
-          requires:
-            - build
+      - run: notacommand
