--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,6 @@ jobs:
       - image: circleci/node:7.10
     steps:
       - checkout
-      - run: notacommand
+      - run: 
+      name: Running tests
+      Command: Make test
